--- a/Project/frontend/src/app/components/partials/header/header.component.html
+++ b/Project/frontend/src/app/components/partials/header/header.component.html
@@ -1,1 +1,19 @@
-<p>header works!</p>
+<header>
+    <div class="container">
+        <a routerLink="/" class="logo">Project</a>
+        <nav>
+            <ul>
+                <li>
+                    <a routerLink="/login">Login</a>
+                </li>
+                <li class="menu_container">
+                    <a routerLink="/dashboard">Viet</a>
+                    <div class="menu">
+                        <a routerLink="/profile">Profile</a>
+                        <a>Log out</a>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</header>
