--- a/Project/frontend/src/app/components/partials/header/header.component.css
+++ b/Project/frontend/src/app/components/partials/header/header.component.css
@@ -56,7 +56,9 @@ header{
     display: none;
   }
   
- 
+  .menu-container:hover .menu{
+    display: block;
+  }
   
   .menu a{
     width: 100%;
