--- a/Project/frontend/src/app/components/pages/home/home.component.html
+++ b/Project/frontend/src/app/components/pages/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<ul>
+    <li *ngFor="let user of user_datas ">
+        <a routerLink="/">
+            
+        </a>
+    </li>
+</ul>
