--- a/Project/frontend/src/app/components/pages/home/home.component.html
+++ b/Project/frontend/src/app/components/pages/home/home.component.html
@@ -1,7 +1,10 @@
 <ul>
     <li *ngFor="let user of user_datas ">
-        <a routerLink="/">
-            
+        <a routerLink="/user/{{user.id}}">
+            <img [src]="user.imageUrl" [alt]="user.name"/>
+            <div class="name">
+                {{user.name}}
+            </div>
         </a>
     </li>
 </ul>
