--- a/Project/frontend/src/app/components/pages/test1/test1.component.html
+++ b/Project/frontend/src/app/components/pages/test1/test1.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <img [src]="userData.imageUrl" [alt]="userData.name"/>
+    <img [src]="user_data.imageUrl" [alt]="user_data.name"/>
     <div class="name">
-        {{userData.name}}
+        {{user_data.name}}
     </div>
 </div>
