--- a/Project/frontend/src/app/components/pages/home/home.component.css
+++ b/Project/frontend/src/app/components/pages/home/home.component.css
@@ -25,8 +25,8 @@ ul{
   }
   
   li a img{
-    object-fit: cover;
-    height: 14.5rem;
+    object-fit: fill;
+    height: 20rem;
   }
   
   .content{
@@ -72,19 +72,3 @@ ul{
     margin-top: 0.2rem;
   }
   
-  .cook-time{
-    font-size: 0.9rem;
-    flex: 3;
-    text-align: right;
-  }
-  
-  .price{
-    position: absolute;
-    bottom: 0;
-    left: 0.9rem;
-    background: white;
-    padding: 0.3rem 100% 0 0;
-    color: #414141;
-    margin-top: 0.7rem;
-    font-size: 1.1rem;
-  }
