--- a/Project/frontend/src/app/components/partials/header/header.component.html
+++ b/Project/frontend/src/app/components/partials/header/header.component.html
@@ -10,8 +10,8 @@
                     <a routerLink="/">Home</a>
                     <a routerLink="/document1">Document1</a>
                     <a routerLink="/document2">Document2</a>
-                    <a routerLink="/test1">Test1</a>
-                    <a routerLink="/test2">Test2</a>
+                    <a *ngIf="isAuth" routerLink="/test1">Test1</a>
+                    <a *ngIf="isAuth" routerLink="/test2">Test2</a>
                 </div>
             </li>
             
@@ -22,7 +22,6 @@
             <li *ngIf="isAuth" class="menu-container">
                 <a routerLink="/dashboard">{{user.name}}</a>
                 <div class="menu">
-                <a routerLink="/profile">Pages</a>
                 <a (click)="logOut()">Logout</a>
                 </div>
             </li>     
