--- a/Project/frontend/src/app/components/pages/register-page/register-page.component.html
+++ b/Project/frontend/src/app/components/pages/register-page/register-page.component.html
@@ -1,6 +1,16 @@
 <div class="container">
     <div class="details">
-        <form [formGroup]="loginForm" (ngSubmit)="submit()">
+        <form [formGroup]="registerForm" (ngSubmit)="submit()">
+            <div class="input-container">
+                <label>Name</label>
+                <div>
+                    <input type="name" placeholder="Name" formControlName="name"/>
+                </div>
+                <div class="error-list" *ngIf="fc.name.errors && isSubmited">
+                    <div *ngIf="fc.name.errors.required">Should not be empty</div>
+                </div>
+            </div>
+            
             <div class="input-container">
                 <label>Email</label>
                 <div>
@@ -24,15 +34,9 @@
                 </div>
             </div>
             <div class="button">
-                <button type="submit">Login</button>
+                <button type="submit">Register</button>
             </div>
         </form>
-        <div class="register">
-            New user? &nbsp;
-            <a routerLink="/register" [queryParams]="{returnUrl : returnUrl}">
-              Register here
-            </a>
-          </div>
 
     </div>
 </div>
