--- a/Project/frontend/src/app/components/pages/document1/document1.component.html
+++ b/Project/frontend/src/app/components/pages/document1/document1.component.html
@@ -1,1 +1,9 @@
-<p>document1 works!</p>
+<ul>
+    <li *ngFor="let user of user_login_data">
+        <div class="name">
+            {{user.name}}
+        </div>
+
+        
+    </li>
+</ul>
