--- a/Project/frontend/src/app/components/partials/square-grid/square-grid.component.html
+++ b/Project/frontend/src/app/components/partials/square-grid/square-grid.component.html
@@ -1,1 +1,4 @@
-<p>square-grid works!</p>
+<div class="square-grid">
+    <div class="grid-cell" *ngFor="let cell of gridCells"></div>
+  </div>
+  
