--- a/Project/frontend/src/app/components/pages/test2/test2.component.html
+++ b/Project/frontend/src/app/components/pages/test2/test2.component.html
@@ -1,1 +1,6 @@
-<p>test2 works!</p>
+<ul>
+    <li *ngFor="let row of squareRow">
+        <li *ngFor="let column of squareColumn">
+            <div>abc</div>
+    </li>
+</ul>
